--- a/3/DirectAgents.Web/DirectAgents.Web/packages.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
   <package id="FluentValidationNA" version="1.2.16" targetFramework="net45" />
   <package id="HttpAuthModule" version="2.2.2.0" targetFramework="net45" />
   <package id="KendoGridBinderEx" version="5.0.0.10" targetFramework="net45" />
@@ -24,5 +24,6 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
   <package id="ReportViewerForMvc" version="1.0.1" targetFramework="net45" />
   <package id="System.Linq.Dynamic.Library" version="1.1.14" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
