--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -212,6 +212,8 @@
     <Compile Include="Areas\AB\Controllers\SpendBucketsController.cs" />
     <Compile Include="Areas\AB\Controllers\VendorsController.cs" />
     <Compile Include="Areas\AB\Models\DashboardVM.cs" />
+    <Compile Include="Areas\ClientAdmin\ClientAdminAreaRegistration.cs" />
+    <Compile Include="Areas\ClientAdmin\Controllers\ClientReportsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\ActionsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\CampStatsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\DailySummariesController.cs" />
@@ -252,7 +254,6 @@
     <Compile Include="Areas\SearchAdmin\SearchAdminAreaRegistration.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Controllers\BudgetsController.cs" />
-    <Compile Include="Controllers\ClientReportsController.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
     <Compile Include="Controllers\ScreensController.cs" />
     <Compile Include="Controllers\StatsController.cs" />
@@ -879,6 +880,7 @@
   <ItemGroup>
     <Folder Include="Areas\AB\Views\ClientBudgets\" />
     <Folder Include="Areas\AB\Views\SpendBuckets\" />
+    <Folder Include="Areas\ClientAdmin\Models\" />
     <Folder Include="Areas\RevTrack\Models\" />
     <Folder Include="Areas\RevTrack\Views\Shared\" />
     <Folder Include="Areas\SearchAdmin\Models\" />
@@ -1111,6 +1113,11 @@
     <Content Include="Areas\SearchAdmin\Views\SearchProfiles\Show.cshtml" />
     <Content Include="Areas\SearchAdmin\Views\SearchProfiles\ConvTypes.cshtml" />
     <Content Include="Areas\ProgAdmin\Views\Employees\Show.cshtml" />
+    <Content Include="Areas\ClientAdmin\Views\web.config" />
+    <Content Include="Areas\ClientAdmin\Views\Shared\_LayoutClient.cshtml" />
+    <Content Include="Areas\ClientAdmin\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\ClientAdmin\Views\ClientReports\Index.cshtml" />
+    <Content Include="Areas\ClientAdmin\Views\ClientReports\Edit.cshtml" />
     <None Include="Properties\PublishProfiles\biz-test.pubxml" />
     <None Include="Properties\PublishProfiles\biz.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
@@ -1127,9 +1134,9 @@
     <Content Include="Views\Screens\SalesStats.cshtml" />
     <None Include="Properties\PublishProfiles\dagents - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\dagents - Web Deploy.pubxml" />
-    <Content Include="Views\ClientReports\Index.cshtml" />
     <None Include="Properties\PublishProfiles\dagents__dev.pubxml" />
     <None Include="Properties\PublishProfiles\dagents__staging.pubxml" />
+    <Content Include="Views\Shared\EditorTemplates\DayOfWeek.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
