--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
-  <package id="BouncyCastle" version="1.7.0" targetFramework="net45" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net452" />
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net45" />
@@ -10,21 +9,58 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.Extended" version="6.1.0.133" targetFramework="net45" />
   <package id="EPPlus" version="4.5.2.1" targetFramework="net452" />
-  <package id="Google.Ads.Common" version="8.1.1" targetFramework="net452" />
-  <package id="Google.AdWords" version="22.4.0" targetFramework="net452" />
-  <package id="Google.Apis" version="1.32.2" targetFramework="net452" />
+  <package id="Google.Ads.Common" version="9.4.0" targetFramework="net452" />
+  <package id="Google.AdWords" version="23.6.0" targetFramework="net452" />
+  <package id="Google.Apis" version="1.33.1" targetFramework="net452" />
   <package id="Google.Apis.Analytics.v3" version="1.32.2.1163" targetFramework="net452" />
-  <package id="Google.Apis.Auth" version="1.32.2" targetFramework="net452" />
-  <package id="Google.Apis.Core" version="1.32.2" targetFramework="net452" />
+  <package id="Google.Apis.Auth" version="1.33.1" targetFramework="net452" />
+  <package id="Google.Apis.Core" version="1.33.1" targetFramework="net452" />
   <package id="Google.Apis.DoubleClickBidManager.v1" version="1.32.2.1141" targetFramework="net452" />
   <package id="Google.Apis.Storage.v1" version="1.32.2.1159" targetFramework="net452" />
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net452" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Configuration" version="1.1.2" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.2" targetFramework="net452" />
+  <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="net452" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="Mono.Options" version="5.3.0" targetFramework="net452" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
   <package id="RestSharp" version="106.3.1" targetFramework="net452" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net452" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net452" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net452" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net452" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net452" />
+  <package id="System.IO" version="4.3.0" targetFramework="net452" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net452" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net452" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net452" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net452" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net452" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net452" />
+  <package id="System.ServiceModel.Http" version="4.4.2" targetFramework="net452" />
+  <package id="System.ServiceModel.Security" version="4.4.2" targetFramework="net452" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net452" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
   <package id="WatiN" version="2.1.0" targetFramework="net45" />
 </packages>
