--- a/3/DirectAgents.Web/DirectAgents.Web/packages.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="FluentValidationNA" version="1.2.16" targetFramework="net45" />
   <package id="HttpAuthModule" version="2.2.2.0" targetFramework="net45" />
   <package id="KendoGridBinderEx" version="5.0.0.10" targetFramework="net45" />
+  <package id="ManyConsole" version="1.0.0.4" targetFramework="net452" />
   <package id="MicosoftReportViewerWebForms_v11" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net452" />
@@ -17,6 +18,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Mono.Options" version="5.3.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Ninject" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net45" />
