--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -4455,6 +4455,7 @@
     <Content Include="Views\Analysts\EditManager.cshtml" />
     <Content Include="Views\People\Strategists.cshtml" />
     <Content Include="Views\People\EditStrategist.cshtml" />
+    <Content Include="Views\Admin\CampaignMaintenance.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
