--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -569,6 +569,7 @@
     <Compile Include="Etl\LoaderTask.cs" />
     <Compile Include="ICakeMarketing.cs" />
     <Compile Include="ICakeMarketingCache.cs" />
+    <Compile Include="Logging\EnterpriseLibrary\AccountFileListener.cs" />
     <Compile Include="Logging\Loggers\ConsoleLogger.cs" />
     <Compile Include="Logging\Loggers\EnterpriseLibraryLogger.cs" />
     <Compile Include="Logging\ILogger.cs" />
