--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -431,7 +431,7 @@
       - ::1 (equals to ::1/128)
 
       e.g) 127.0.0.1;182.249.0.0/16;182.248.112.128/26;::1 -->
-    <add key="RestrictIPAddresses" value="104.192.219.26;76.79.74.61;108.5.54.85;::1" /><!-- NY, LA, Sadie -->
+    <add key="RestrictIPAddresses" value="104.192.219.26;76.79.74.60;76.79.74.61;108.5.54.85;::1" /><!-- NY, LA1, LA2, Sadie -->
     <!-- [optional] If set, specified pattern url requests are skipped by http auth and IP Restriction. -->
     <!-- <add key="IgnorePathRegex" value="^/Home/Ignore$|^/Ignore\.aspx$|^/Content/"/> -->
     <!--
