YAM_WaitTime_Seconds config

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -172,7 +172,8 @@
     <add key="YahooClientSecret_Alt1" value="d824e15d746f725aeb735644bc7ef634bbb76a71" />
     <add key="YahooApplicationAccessCode_Alt1" value="3ueb2k7" />
     <add key="YAMBaseUrl" value="https://api-sched-v3.admanagerplus.yahoo.com/yamplus_api" />
-    <add key="YAM_NumTries_GetReportStatus" value="60" />
+    <add key="YAM_NumTries_GetReportStatus" value="30" />
+    <add key="YAM_WaitTime_Seconds" value="30" />
     <add key="YAMMap_PostClickConv" value="Click Through Conversion" />
     <add key="YAMMap_PostViewConv" value="View Through Conversion" />
     <add key="YAMMap_PostClickRev" value="" />
