--- a/3/DirectAgents.Web/DirectAgents.Web/packages.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/packages.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
-  <package id="FluentValidationNA" version="1.2.16" targetFramework="net45" />
   <package id="HttpAuthModule" version="2.2.2.0" targetFramework="net45" />
-  <package id="KendoGridBinderEx" version="5.0.0.10" targetFramework="net45" />
+  <package id="KendoGridBinder" version="2.0.0" targetFramework="net452" />
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net452" />
   <package id="MicosoftReportViewerWebForms_v11" version="1.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net452" />
@@ -25,7 +24,7 @@
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
   <package id="ReportViewerForMvc" version="1.0.1" targetFramework="net45" />
-  <package id="System.Linq.Dynamic.Library" version="1.1.14" targetFramework="net45" />
+  <package id="System.Linq.Dynamic.Core" version="1.0.8.2" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
