--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -6,14 +6,15 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" />
     <section name="httpAuthModule" type="System.Configuration.NameValueFileSectionHandler" />
   </configSections>
   <connectionStrings>
     <add name="ABContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDomain;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="DAContext" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <!--<add name="DAContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
     <!--<add name="ClientPortalProgContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <add name="ClientPortalProgContext" connectionString="Server=tcp:daazure2.database.windows.net,1433;Initial Catalog=DirectAgentsDev;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng!;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
     <!--<add name="ClientPortalProgContext" connectionString="Server=tcp:daazure1.database.windows.net,1433;Initial Catalog=DirectAgents1;Persist Security Info=False;User ID=daadmin;Password=bObsp0ng;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
@@ -30,6 +31,10 @@
     <contexts>
       <!--<context type="DirectAgents.Domain.Contexts.DAContext, DirectAgents.Domain" disableDatabaseInitialization="true"/>-->
     </contexts>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -131,7 +136,6 @@
     <!--<add key="AppleP12Location" value="d:\home\DA\portal\API\AppleCertificate{0}.p12" />--><!-- azure -->
     <add key="AppleP12Password" value="appleda1" />
   </appSettings>
-
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
@@ -144,7 +148,6 @@
       <endpoint address="https://advertising.criteo.com/API/v201010/AdvertiserService.asmx" binding="basicHttpBinding" bindingConfiguration="CriteoAdvertiserAPISoap" contract="CriteoAPI.CriteoAdvertiserAPISoap" name="CriteoAdvertiserAPISoap" />
     </client>
   </system.serviceModel>
-
   <!--Note: In order for this to work, need to use the Configuration Manager in IIS and unlock the sections for anonymous/windowsAuthentication. -->
   <location path="stats">
     <system.webServer>
@@ -200,7 +203,11 @@
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
-    <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
     <modules>
       <!-- add this on Azure... (Release config) -->
       <!--<add type="HttpAuthModule.HttpAuthModule" name="HttpAuthModule" />-->
