Update primary keys of SummaryMetric tables.

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -547,6 +547,10 @@
     <Compile Include="MigrationsTD\201810241008127_Mig_SummaryMetrics.Designer.cs">
       <DependentUpon>201810241008127_Mig_SummaryMetrics.cs</DependentUpon>
     </Compile>
+    <Compile Include="MigrationsTD\201810251246382_Mig_SummaryMetricsKey.cs" />
+    <Compile Include="MigrationsTD\201810251246382_Mig_SummaryMetricsKey.Designer.cs">
+      <DependentUpon>201810251246382_Mig_SummaryMetricsKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.Designer.cs">
@@ -903,6 +907,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201810241008127_Mig_SummaryMetrics.resx">
       <DependentUpon>201810241008127_Mig_SummaryMetrics.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201810251246382_Mig_SummaryMetricsKey.resx">
+      <DependentUpon>201810251246382_Mig_SummaryMetricsKey.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
