--- a/3/API/DBM/packages.config
+++ b/3/API/DBM/packages.config
@@ -5,5 +5,9 @@
   <package id="Google.Apis.Core" version="1.33.1" targetFramework="net452" />
   <package id="Google.Apis.DoubleClickBidManager.v1" version="1.32.2.1141" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
 </packages>
