--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -35,10 +35,10 @@
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net452" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net452" />
   <package id="System.IO" version="4.3.0" targetFramework="net452" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net452" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net452" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net452" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net452" />
@@ -51,7 +51,12 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net452" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net452" />
-  <package id="System.ServiceModel.Http" version="4.4.2" targetFramework="net452" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.ServiceModel.Http" version="4.5.3" targetFramework="net461" />
+  <package id="System.ServiceModel.Primitives" version="4.5.3" targetFramework="net461" />
   <package id="System.ServiceModel.Security" version="4.4.2" targetFramework="net452" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net452" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net452" />
@@ -59,8 +64,8 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
   <package id="WatiN" version="2.1.0" targetFramework="net45" />
 </packages>
